[package]
name = "threejs-sys-testbench"
version = "0.1.0"
authors = ["Michael Allwright"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
threejs-sys = {path = "../threejs-sys", version = "0.1.0"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]
